--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.8",
     "@react-keycloak/web": "^3.4.0",
+    "@tanstack/react-query": "^4.32.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
