--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.8",
-    "@react-keycloak/web": "^3.4.0",
     "@tanstack/react-query": "^4.32.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +15,7 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "axios": "^0.27.2",
     "framer-motion": "^10.15.0",
     "keycloak-js": "^22.0.1",
     "react": "^18.2.0",
